--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -20,3 +20,9 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+- task: Docker@2
+  inputs:
+    containerRegistry: 'sureshdocker'
+    repository: 'laxmi4u/azuredevops'
+    command: 'buildAndPush'
+    Dockerfile: '**/AzureDockerfile'
